--- a/mysite/polls/templates/polls/results.html
+++ b/mysite/polls/templates/polls/results.html
@@ -1,21 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Result Page</title>
-</head>
-<body>
+{% extends "polls/base.html" %} 
+
+{% block title %}
+    Result Page
+{% endblock title %}
+
+{% block content %} 
     <h1>{{ question.question_text }}</h1>
 
-    <ul>
+    <ul class="list-group">
     {% for choice in question.choice_set.all %}
-        <li>{{ choice.choice_text }} -- {{ choice.votes }} vote{{ choice.votes|pluralize }}</li>
+        <li class="list-group-item list-group-item-action">{{ choice.choice_text }} -- {{ choice.votes }} vote{{ choice.votes|pluralize }}</li>
     {% endfor %}
     </ul>
-    
-    <a href="{% url 'polls:detail' question.id %}">Vote again?</a>
 
-</body>
-</html>
+    <a href="{% url 'polls:detail' question.id %}">Vote again?</a>
+{% endblock content %}
