--- a/mysite/polls/templates/polls/results.html
+++ b/mysite/polls/templates/polls/results.html
@@ -5,7 +5,7 @@
 {% endblock title %}
 
 {% block content %} 
-    <h1>{{ question.question_text }}</h1>
+    <h1 class= "ml-3 mt-4" >{{ question.question_text }}</h1>
 
     <ul class="list-group">
     {% for choice in question.choice_set.all %}
@@ -13,5 +13,5 @@
     {% endfor %}
     </ul>
 
-    <a href="{% url 'polls:detail' question.id %}">Vote again?</a>
+    <a class="nav-item nav-link"  href="{% url 'polls:detail' question.id %}">Vote again?</a>
 {% endblock content %}
