--- a/mysite/polls/templates/polls/index.html
+++ b/mysite/polls/templates/polls/index.html
@@ -8,7 +8,7 @@
     {% if latest_question_list %}
     <ul class="list-group">
     {% for question in latest_question_list %}
-        <li class="list-group-item list-group-item-action"><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
+        <li class="display-4 list-group-item list-group-item-action"><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
     {% endfor %}
     </ul>
     {% else %}
